@@ -1,5 +1,5 @@
-<div id="content" i18n:domain="PloneMeeting">
-    <span i18n:translate="">This advice is inherited from <span i18n:name="linkToItem" tal:replace="structure python: view.adviceHolder.getPrettyLink(**{'maxLength': 120})">Link to advice holder cropped...</span></span>
+<div id="content" class="inherited_advice_item_tooltipster" i18n:domain="PloneMeeting">
+    <span i18n:translate="">This advice is inherited from <span style="display: inline;" i18n:name="linkToItem" tal:replace="structure python: view.adviceHolder.getPrettyLink()">Link to advice holder cropped...</span></span>
     <p>&nbsp;</p>
-    <p i18n:translate="advice_inherited_popup_descr" style="float: right;" class="discreet">Informations displayed regarding advice are taken from the other item including informations about dates, delay and states.</p>
+    <p i18n:translate="advice_inherited_popup_descr" class="discreet">Informations displayed regarding advice are taken from the other item including informations about dates, delay and states.</p>
 </div>
