@@ -1,7 +1,10 @@
-<div id="content" i18n:domain="PloneMeeting" class="meeting_item_absents_tooltipster">
+<div id="content" i18n:domain="PloneMeeting" class="meeting_item_absents_tooltipster" tal:define="viewableItemAbsents view/getItemsForAbsent">
   <h4><span i18n:translate="">This attendee is marked as absent for following items</span> :</h4>
-  <ul>
-    <li tal:repeat="item view/getItemsForAbsent">
+  <ul tal:condition="viewableItemAbsents">
+    <li tal:repeat="item viewableItemAbsents">
       <span tal:content="python: item.getItemNumber(for_display=True)" />. <span tal:replace="structure item/getPrettyLink" /></li>
   </ul>
+  <span tal:condition="not:viewableItemAbsents" i18n:translate="no_shown_items">
+    No visible item for now.
+  </span>
 </div>
