@@ -203,18 +203,18 @@ div.ploneMeetingSelectContainer.annex_type_img_select_box div#annex_type_img_sel
 /* show table using border="0" or border:none */
 #content div[id^='hook_'] table[border='0'] tr th,
 #content div[id^='hook_'] table[border='0'] tr td,
-#content div[id^='hook_'] table[style*='border: none;'] tr th,
-#content div[id^='hook_'] table[style*='border: none;'] tr td,
-#content div[id^='hook_'] table[style*='border:none;'] tr th,
-#content div[id^='hook_'] table[style*='border:none;'] tr td,
-#content div[id^='hook_'] table[style*='border: undefined;'] tr th,
-#content div[id^='hook_'] table[style*='border: undefined;'] tr td,
-#content div[id^='hook_'] table[style*='border:undefined;'] tr th,
-#content div[id^='hook_'] table[style*='border:undefined;'] tr td,
-#content div[id^='hook_'] table[style*='border: medium none;'] tr th,
-#content div[id^='hook_'] table[style*='border: medium none;'] tr td,
-#content div[id^='hook_'] table[style*='border:medium none;'] tr th,
-#content div[id^='hook_'] table[style*='border:medium none;'] tr td,
+#content div[id^='hook_'] table[style*='border: none'] tr th,
+#content div[id^='hook_'] table[style*='border: none'] tr td,
+#content div[id^='hook_'] table[style*='border:none'] tr th,
+#content div[id^='hook_'] table[style*='border:none'] tr td,
+#content div[id^='hook_'] table[style*='border: undefined'] tr th,
+#content div[id^='hook_'] table[style*='border: undefined'] tr td,
+#content div[id^='hook_'] table[style*='border:undefined'] tr th,
+#content div[id^='hook_'] table[style*='border:undefined'] tr td,
+#content div[id^='hook_'] table[style*='border: medium none'] tr th,
+#content div[id^='hook_'] table[style*='border: medium none'] tr td,
+#content div[id^='hook_'] table[style*='border:medium none'] tr th,
+#content div[id^='hook_'] table[style*='border:medium none'] tr td,
 #content div[id^='hook_'] table[style*='border-collapse:collapse; border:none'] tr th,
 #content div[id^='hook_'] table[style*='border-collapse:collapse; border:none'] tr td,
 #content div.pmMoreInfo table[border='0'] tr th,
@@ -434,7 +434,8 @@ td.td_cell_advices div.categorized-elements {
 }
 
 div#content.advice_infos_tooltipster,
-div#content.meeting_item_absents_tooltipster {
+div#content.meeting_item_absents_tooltipster,
+div#content.inherited_advice_item_tooltipster {
     width: 700px;
 }
 
@@ -447,7 +448,7 @@ div#content.meeting_item_absents_tooltipster div.pretty_link {
    display: inline-block;
 }
 
-div#content.group_members_tooltipster {
+div.tooltipster-content div#content {
     padding-left: 0.5em;
     padding-right: 0.5em;
     padding-top: 0.5em;
@@ -1312,8 +1313,7 @@ dl.portlet.portletWidgetCollection div.widget-portlet li a {
 }
 
 /* pretty link displayed to inherited item in advice popup */
-#content dd.actionMenuContentAdvice a.pretty_link,
-#content dd.actionMenuContentAdvice div.pretty_link {
+#content div.pretty_link {
     display: inline;
 }
 /* pretty link displayed to inherited item in advice popup */
